# fastapi_template

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
_docker/web/: Dockerfile
alembic/: env.py
src/: __main__.py  app.py  configuration.py  containers.py  database.py  server.py  settings.py
src/common/exceptions/: http.py
src/common/interfaces/: repository.py
src/common/mixins/: models.py  schemas.py  services.py
src/common/repositories/sqlalchemy/: __init__.py  filter_builder.py  repository.py
src/common/schemas/: response.py
src/common/schemas/filters/: __init__.py  base.py
src/user/: auth.py  exceptions.py  interfaces.py  schemas.py  services.py
src/user/private/: repositories.py
src/user/private/models/: user.py
src/user/web/rest/: __init__.py  auth.py  user.py
